# AI_investing

./: .gitignore  README.md  analysis.py  cache.py  config.py  insiders.py  llm.py  main.py  metrics.json  metrics.py  pyproject.toml  report.py  run.py  scoring.py  sec.py  web.py
ai_investing/: __init__.py  analysis.py  insiders.py  llm.py  metrics.py  report.py  run.py  scoring.py  sec.py  web.py
docs/: mvp_implementation_plan.md  plan.md
lstm_stock_market_forecast/: __init__.py  project.py
report/.cache/sec/0000320193/: signals.json  timeseries.parquet
report/AAPL/: AAPL_2025-12-26.md
reports/.cache/sec/0000320193/: classification.json  filings_metadata.json  timeseries.json
reports/.cache/web/alpha_vantage/AAPL/: classification.json  insider_transactions.json  insiders_summary.json  metrics.json  signals.json  timeseries.json
reports/AAPL/: AAPL_2025-12-24.txt
